--- a/views/recipe.pug
+++ b/views/recipe.pug
@@ -14,7 +14,7 @@ block content
   h2 Ingredients
   ul
     //- 4. Use Pug's `each` iterator to render an `<li>` for each ingredient
-    each ingredient in recipes.ingredients
+    each ingredient in recipe.ingredients
       li= ingredient
 
   h2 Steps
