Linked JS and Images

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,4 +10,4 @@ html
   body
     block content
     //- 3. Link to the script.js file
-    link(rel="script", href="/static/js/script.js")
+    script(src="/static/js/script.js")
